--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.16",
     "rxjs": "^5.5.6",
     "uikit": "^3.0.0-beta.42",
     "zone.js": "^0.8.19"
