--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.16",
     "rxjs": "^5.5.6",
-    "uikit": "^3.0.0-beta.42",
+    "uikit": "^3.0.0-rc.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
